--- a/index.html
+++ b/index.html
@@ -9,38 +9,76 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;0,900;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <div class="navbar">
-      <div class="container">
-        <div class="navbar__blocks">
-          <div class="navbar__label">КиноПоиск</div>
-          <!-- /.navbar__label -->
-          <form action="#" class="navbar-search">
-            <input
-              class="search"
-              type="search"
-              placeholder="Фильмы, сериалы, актеры"
-            />
-            <input
-              class="search-icon"
-              type="image"
-              src="src/img/main/search.svg"
-            />
-          </form>
-          <!-- /. navbar-search  -->
-          <div class="navbar-profile">
-            <input type="image" src="src/img/main/bookmark.svg" />
-            <div class="profile-avatar"></div>
+    <div class="main">
+      <div class="navbar">
+        <div class="container">
+          <div class="navbar__blocks">
+            <div class="navbar__label">КиноПоиск</div>
+            <!-- /.navbar__label -->
+            <form action="#" class="navbar-search">
+              <input
+                class="search"
+                type="search"
+                placeholder="Фильмы, сериалы, актеры"
+              />
+              <input
+                class="search-icon"
+                type="image"
+                src="src/img/main/search.svg"
+              />
+            </form>
+            <!-- /. navbar-search  -->
+            <div class="navbar-profile">
+              <input type="image" src="src/img/main/bookmark.svg" />
+              <div class="profile-avatar"></div>
+            </div>
+            <!-- /.navbar-profile -->
           </div>
-          <!-- /.navbar-profile -->
+          <!-- /.navbar__blocks -->
         </div>
-        <!-- /.navbar__blocks -->
+        <!-- /.container -->
       </div>
-      <!-- /.container -->
+      <!-- /.navbar -->
+
+      <div class="header">
+        <div class="container">
+          <div class="header__blocks">
+            <h1 class="header__title">Бэтмен</h1>
+            <!-- /.header__title -->
+
+            <h2 class="header__subtitle">The Batman</h2>
+            <!-- /.header__subtitle -->
+            <div class="header__block">
+              <div class="header__block-wrap">
+                <button class="button header-button">Фильм</button>
+                <span>США, 2021 год</span>
+                <button class="button play-button">
+                  <img src="src/img/header/play-icon.svg" alt="" />
+                </button>
+                <span>Смотреть трейлер</span>
+              </div>
+              <div class="header__block-wrap">
+                <span>Подробнее</span>
+                <button class="button button-more">
+                  <img src="src/img/header/play-icon.svg" alt="" />
+                </button>
+              </div>
+            </div>
+            <!-- /.header__block -->
+          </div>
+          <!-- /.header__blocks -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.header -->
     </div>
-    <!-- /.navbar -->
   </body>
   <!-- js  -->
   <script src="src/js/pageChanger.js"></script>
