--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;0,900;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -79,6 +83,105 @@
       </div>
       <!-- /.header -->
     </div>
+    <!-- /.main  -->
+
+    <div class="more">
+      <div class="container">
+        <div class="more__blocks">
+          <div class="more__cover">
+            <div class="cover-img">
+              <img src="src/img/more/batman.png" alt="" />
+            </div>
+            <button class="button">Буду смотреть</button>
+            <div class="more__roles">
+              <h2>В главных ролях:</h2>
+              <a>Роберт Паттинсон</a>
+              <a>Зои Кравиц</a>
+              <a>Колин Фаррелл</a>
+              <a>Питер Сарсгаард</a>
+              <a>Пол Дано</a>
+              <a>Энди Серкис</a>
+              <a>Джеффри Райт</a>
+              <a>Джон Туртурро</a>
+              <a>Макс Карвер</a>
+              <a>Кон О’Нилл</a>
+            </div>
+          </div>
+          <!-- /.more__cover -->
+
+          <div class="more-contain">
+            <div class="more-pages">
+              <div>Описание</div>
+              <div>Рецензии</div>
+              <div>Премьеры</div>
+              <div>Актеры</div>
+              <div>Награды</div>
+              <div>Факты</div>
+              <div>Сайты</div>
+              <a class="more-bookmark">
+                <img src="src/img/more/bookmark.svg" alt="" />
+              </a>
+            </div>
+            <div class="more-info">
+              <div class="more-page">
+<p>
+                  Предстоящий американский супергеройский фильм, основанный на
+                  одноимённых комиксах издательства DC Comics. Картина будет
+                  выпущена компанией Warner Bros. и будет перезагрузкой всех
+                  фильмов о Бэтмене. Фильм является десятым по счёту фильмом из
+                  Расширенной вселенной DC. Режиссёром и сценаристом фильма
+                  выступит Мэтт Ривз, а главную роль исполнит Роберт Паттинсон
+                  <h2>Разработка</h2>
+                  В октябре 2014 года студия Warner Bros. объявила, что в
+                  разработке находится сольный фильм о Бэтмене, роль которого
+                  вновь исполнит Бен Аффлек. В июле 2015 года сообщалось, что
+                  Аффлек ведёт переговоры со студией по поводу постановки фильма и
+                  совместного написания сценария с Джеффом Джонсом.
+                  <br />
+                  После выхода фильма «Бэтмен против Супермена: На заре
+                  справедливости» руководитель агентства WME Патрик Уайтсел
+                  подтвердил, что Аффлек написал сценарий для сольного фильма о
+                  Бэтмене и в настоящий момент его рассматривают студия и DC. В
+                  мае 2016 года Джереми Айронс подтвердил, что он появится в
+                  фильме про Тёмного Рыцаря.
+                  <br />
+                  На Comic-Con в Сан-Диего в июле 2016 года было официально
+                  подтверждено, что Аффлек станет режиссёром картины. В августе
+                  2016 года на одной из страниц Аффлека в социальных сетях был
+                  опубликован тестовый материал, в котором был показан персонаж
+                  Детстроук. 8 сентября 2016 года Джефф Джонс подтвердил, что Джо
+                  Манганьелло сыграет наёмника Слейда Уилсона, который, возможно,
+                  станет главным злодеем фильма.
+</p>
+              </div>
+              <!-- /.more-page -->
+              <div class="more-addictional">
+                <h2>Подпишитесь на обновления</h2>
+                <form class="more-form" action="#">
+                  <input type="text" placeholder="Ваш Email" />
+                  <button class="button">
+                    <img src="src/img/more/okay.svg" alt="" />
+                  </button>
+                </form>
+                <a href="#" class="ad-block" alt="">
+                  <img
+                    src="https://via.placeholder.com/220x276.png?text=Реклама"
+                    alt=""
+                  />
+                </a>
+                <!-- /.ad-block -->
+              </div>
+              <!-- /.more-addictional -->
+            </div>
+            <!-- /.more-info -->
+          </div>
+          <!-- /.more-contain -->
+        </div>
+        <!-- /.more__blocks -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.more -->
   </body>
   <!-- js  -->
   <script src="src/js/pageChanger.js"></script>
