--- a/index.html
+++ b/index.html
@@ -111,49 +111,19 @@
 
           <div class="more-contain">
             <div class="more-pages">
-              <div>Описание</div>
-              <div>Рецензии</div>
-              <div>Премьеры</div>
-              <div>Актеры</div>
-              <div>Награды</div>
-              <div>Факты</div>
-              <div>Сайты</div>
+              <div class="page-selector white">Описание</div>
+              <div class="page-selector">Рецензии</div>
+              <div class="page-selector">Премьеры</div>
+              <div class="page-selector">Актеры</div>
+              <div class="page-selector">Награды</div>
+              <div class="page-selector">Факты</div>
+              <div class="page-selector">Сайты</div>
               <a class="more-bookmark">
                 <img src="src/img/more/bookmark.svg" alt="" />
               </a>
             </div>
             <div class="more-info">
-              <div class="more-page">
-<p>
-                  Предстоящий американский супергеройский фильм, основанный на
-                  одноимённых комиксах издательства DC Comics. Картина будет
-                  выпущена компанией Warner Bros. и будет перезагрузкой всех
-                  фильмов о Бэтмене. Фильм является десятым по счёту фильмом из
-                  Расширенной вселенной DC. Режиссёром и сценаристом фильма
-                  выступит Мэтт Ривз, а главную роль исполнит Роберт Паттинсон
-                  <h2>Разработка</h2>
-                  В октябре 2014 года студия Warner Bros. объявила, что в
-                  разработке находится сольный фильм о Бэтмене, роль которого
-                  вновь исполнит Бен Аффлек. В июле 2015 года сообщалось, что
-                  Аффлек ведёт переговоры со студией по поводу постановки фильма и
-                  совместного написания сценария с Джеффом Джонсом.
-                  <br />
-                  После выхода фильма «Бэтмен против Супермена: На заре
-                  справедливости» руководитель агентства WME Патрик Уайтсел
-                  подтвердил, что Аффлек написал сценарий для сольного фильма о
-                  Бэтмене и в настоящий момент его рассматривают студия и DC. В
-                  мае 2016 года Джереми Айронс подтвердил, что он появится в
-                  фильме про Тёмного Рыцаря.
-                  <br />
-                  На Comic-Con в Сан-Диего в июле 2016 года было официально
-                  подтверждено, что Аффлек станет режиссёром картины. В августе
-                  2016 года на одной из страниц Аффлека в социальных сетях был
-                  опубликован тестовый материал, в котором был показан персонаж
-                  Детстроук. 8 сентября 2016 года Джефф Джонс подтвердил, что Джо
-                  Манганьелло сыграет наёмника Слейда Уилсона, который, возможно,
-                  станет главным злодеем фильма.
-</p>
-              </div>
+              <div id="page" class="more-page"></div>
               <!-- /.more-page -->
               <div class="more-addictional">
                 <h2>Подпишитесь на обновления</h2>
@@ -184,5 +154,6 @@
     <!-- /.more -->
   </body>
   <!-- js  -->
+  <script src="src/js/showMore.js"></script>
   <script src="src/js/pageChanger.js"></script>
 </html>
