--- a/index.html
+++ b/index.html
@@ -70,12 +70,17 @@
             <!-- /.header__subtitle -->
             <div class="header__block">
               <div class="header__block-wrap">
-                <button class="button header-button">Фильм</button>
-                <span>США, 2021 год</span>
-                <button class="button play-button">
-                  <img src="src/img/header/play-icon.svg" alt="" />
-                </button>
-                <span>Смотреть трейлер</span>
+                <div class="header-buttons-wrap">
+                  <button class="button header-button">Фильм</button>
+                  <span>США, 2021 год</span>
+                </div>
+                <div class="header-buttons-wrap">
+                  <button class="button play-button">
+                    <img src="src/img/header/play-icon.svg" alt="" />
+                  </button>
+                  <span>Смотреть трейлер</span>
+                </div>
+                <!-- /. header-buttons-wrap  -->
               </div>
               <div class="header__block-wrap">
                 <span>Подробнее</span>
