--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main">
       <div class="navbar">
         <div class="container">
-          <div class="navbar__blocks">
+          <div class="navbar-wrap">
             <a href="" class="navbar__label animate__animated animate__bounce">
               КиноПоиск
             </a>
@@ -54,7 +54,7 @@
             </div>
             <!-- /.navbar-profile -->
           </div>
-          <!-- /.navbar__blocks -->
+          <!-- /.navbar-wrap -->
         </div>
         <!-- /.container -->
       </div>
@@ -62,7 +62,7 @@
 
       <div class="header">
         <div class="container">
-          <div class="header__blocks">
+          <div class="header-wrap">
             <h1 class="header__title">Бэтмен</h1>
             <!-- /.header__title -->
 
@@ -91,7 +91,7 @@
             </div>
             <!-- /.header__block -->
           </div>
-          <!-- /.header__blocks -->
+          <!-- /.header-wrap -->
         </div>
         <!-- /.container -->
       </div>
@@ -101,7 +101,7 @@
 
     <div class="more">
       <div class="container">
-        <div class="more__blocks">
+        <div class="more-wrap">
           <div class="more__cover">
             <div class="cover-img">
               <img src="src/img/more/batman.png" alt="" />
@@ -161,7 +161,7 @@
           </div>
           <!-- /.more-contain -->
         </div>
-        <!-- /.more__blocks -->
+        <!-- /.more-wrap -->
       </div>
       <!-- /.container -->
     </div>
